# league-journal

./: .gitignore  Cargo.toml  README.md  config.json  template.hbs
journal-generator/: Cargo.toml
journal-generator/src/: main.rs
src/: config.rs  fetcher.rs  game_structs.rs  main.rs
src/fetcher/: date.rs
templates/: template.hbs
