[package]
name = "league-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
handlebars = "5.1.0"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
